# Geant4-WattFissionSpectrum

./: CMakeLists.txt  README.md  WattFissionSpectrum.py  auto_run.sh  auto_wfs.sh  cf_252_neutron_source_gen.py  cry2mac.py  cry_auto_run.sh  main.cc  plot.py  set_cry_env.sh  testOut.cc  vis.mac  wfs_auto_run.sh  wfs_config.py  wfs_neutron_gen2mac.py
include/: ActionInitialization.hh  Configure.hh  DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc
